--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
                     </div>
                 </div>
             </div>
+            <div class="some_text">
+                <div class="some_text_left_side">
+                    <h3>In life and in business, we all bring a little something special to the table.</h3>
+                </div>
+                <div class="some_text_right_side">
+                    <p>Spigot's team of design, development, SEO and security experts collaborate to provide you with seamless website design, digital marketing and support — all under one roof.</p>
+                    <p>With us, you get everything you need and nothing you don't.</p>
+                </div>
+            </div>
         </article>
     </main>
 </body>
