--- a/index.html
+++ b/index.html
@@ -78,8 +78,29 @@
                     <h3>In life and in business, we all bring a little something special to the table.</h3>
                 </div>
                 <div class="some_text_right_side">
-                    <p>Spigot's team of design, development, SEO and security experts collaborate to provide you with seamless website design, digital marketing and support — all under one roof.</p>
+                    <p>Spigot's team of design, development, SEO and security experts collaborate to provide you with
+                        seamless website design, digital marketing and support — all under one roof.</p>
                     <p>With us, you get everything you need and nothing you don't.</p>
+                </div>
+            </div>
+            <div class="images_wrapper">
+                <div class="top_side_image">
+                    <img src="./images/lls-project-header.jpg" alt="">
+                </div>
+                <div class="top_side_image">
+                    <img src="./images/DelicateArch.jpg" alt="">
+                </div>
+                <div class="top_side_image">
+                    <img src="./images/cinch-project-header.jpg" alt="">
+                </div>
+                <div class="bottom_side_image">
+                    <img src="./images/pcfd-station.jpg" alt="">
+                </div>
+                <div class="bottom_side_image">
+                    <img src="./images/albano-project-header.jpg" alt="">
+                </div>
+                <div class="bottom_side_image">
+                    <img src="./images/all-seasons-adventures.jpg" alt="">
                 </div>
             </div>
         </article>
