add images page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Website</title>
+    <title>Spigot</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
         integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
@@ -84,23 +84,17 @@
                 </div>
             </div>
             <div class="images_wrapper">
-                <div class="top_side_image">
-                    <img src="./images/lls-project-header.jpg" alt="">
+                <div class="front_image_first front_img ">
                 </div>
-                <div class="top_side_image">
-                    <img src="./images/DelicateArch.jpg" alt="">
+                <div class="front_img front_image_second">
                 </div>
-                <div class="top_side_image">
-                    <img src="./images/cinch-project-header.jpg" alt="">
+                <div class="front_img front_image_third">
                 </div>
-                <div class="bottom_side_image">
-                    <img src="./images/pcfd-station.jpg" alt="">
+                <div class="front_img front_image_fourth">
                 </div>
-                <div class="bottom_side_image">
-                    <img src="./images/albano-project-header.jpg" alt="">
+                <div class="front_img front_image_fifth">
                 </div>
-                <div class="bottom_side_image">
-                    <img src="./images/all-seasons-adventures.jpg" alt="">
+                <div class="front_img front_image_sixth">
                 </div>
             </div>
         </article>
