--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             </div>
             <div class="images_wrapper">
                 <div class="front_image_first front_img ">
+                    <div class="inner_first_image">
+                        <h2 class="h2_hover">All Seasons adventures</h2>
+                    </div>
                 </div>
                 <div class="front_img front_image_second">
                 </div>
@@ -95,6 +98,18 @@
                 <div class="front_img front_image_fifth">
                 </div>
                 <div class="front_img front_image_sixth">
+                </div>
+            </div>
+            <div class="dr_content_wrapper">
+                <div class="dr_content_left_side">
+                    <div class="dr_content_left_side_inner">
+                        <img src="./images/Dr-Sean-Mann-chiropractor-Park-City-200x200.jpg" alt="doctor_image"
+                            class="dr_image">
+                        <div>
+                            <p class="dr_text">Dr. Sean Mann, D.C.</p>
+                            <div class="dr_line">a</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </article>
