--- a/index.html
+++ b/index.html
@@ -61,14 +61,41 @@
                         <div class="service_box">
                             <img src="./images/icons/web-design.svg" alt="website_design_icon">
                             <h3>Website Design</h3>
+                            <div class="service_box_in_hover">
+                                <p>Build it</p>
+                                <p>Custome Website Design</p>
+                                <p>WordPress Development</p>
+                                <p>Search Engine Optimization (SEO)</p>
+                                <p>Website Copywriting & Copyediting</p>
+                                <p>Ecommerce Design & Development</p>
+                                <p>Built for Future Extensibility</p>
+                            </div>
                         </div>
                         <div class="service_box">
                             <img src="./images/icons/web-design.svg" alt="website_design_icon">
                             <h3>Digital Marketing</h3>
+                            <div class="service_box_in_hover">
+                                <p>Promote it</p>
+                                <p>Custome Website Design</p>
+                                <p>WordPress Development</p>
+                                <p>Search Engine Optimization (SEO)</p>
+                                <p>Website Copywriting & Copyediting</p>
+                                <p>Ecommerce Design & Development</p>
+                                <p>Built for Future Extensibility</p>
+                            </div>
                         </div>
                         <div class="service_box">
                             <img src="./images/icons/web-design.svg" alt="website_design_icon">
                             <h3>Wordpress Support</h3>
+                            <div class="service_box_in_hover">
+                                <p>Maintain it</p>
+                                <p>Custome Website Design</p>
+                                <p>WordPress Development</p>
+                                <p>Search Engine Optimization (SEO)</p>
+                                <p>Website Copywriting & Copyediting</p>
+                                <p>Ecommerce Design & Development</p>
+                                <p>Built for Future Extensibility</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -86,32 +113,158 @@
             <div class="images_wrapper">
                 <div class="front_image_first front_img ">
                     <div class="inner_first_image">
-                        <h2 class="h2_hover">All Seasons adventures</h2>
+                        <h2 class="images_inner_name">All Seasons Adventures</h2>
+                        <p class="images_inner_text">Clean redesign and migration from Magento to WooCommerce.</p>
+                        <button class="images_inner_btn">Read More</button>
                     </div>
                 </div>
                 <div class="front_img front_image_second">
+                    <div class="inner_first_image">
+                        <h2 class="images_inner_name">All Seasons Adventures</h2>
+                        <p class="images_inner_text">Clean redesign and migration from Magento to WooCommerce.</p>
+                        <button class="images_inner_btn">Read More</button>
+                    </div>
                 </div>
                 <div class="front_img front_image_third">
+                    <div class="inner_first_image">
+                        <h2 class="images_inner_name">All Seasons Adventures</h2>
+                        <p class="images_inner_text">Clean redesign and migration from Magento to WooCommerce.</p>
+                        <button class="images_inner_btn">Read More</button>
+                    </div>
                 </div>
                 <div class="front_img front_image_fourth">
+                    <div class="inner_first_image">
+                        <h2 class="images_inner_name">All Seasons Adventures</h2>
+                        <p class="images_inner_text">Clean redesign and migration from Magento to WooCommerce.</p>
+                        <button class="images_inner_btn">Read More</button>
+                    </div>
                 </div>
                 <div class="front_img front_image_fifth">
+                    <div class="inner_first_image">
+                        <h2 class="images_inner_name">All Seasons Adventures</h2>
+                        <p class="images_inner_text">Clean redesign and migration from Magento to WooCommerce.</p>
+                        <button class="images_inner_btn">Read More</button>
+                    </div>
                 </div>
                 <div class="front_img front_image_sixth">
+                    <div class="inner_first_image">
+                        <h2 class="images_inner_name">All Seasons Adventures</h2>
+                        <p class="images_inner_text">Clean redesign and migration from Magento to WooCommerce.</p>
+                        <button class="images_inner_btn">Read More</button>
+                    </div>
                 </div>
             </div>
             <div class="dr_content_wrapper">
                 <div class="dr_content_left_side">
                     <div class="dr_content_left_side_inner">
-                        <img src="./images/Dr-Sean-Mann-chiropractor-Park-City-200x200.jpg" alt="doctor_image"
-                            class="dr_image">
+                        <div>
+                            <img src="./images/Dr-Sean-Mann-chiropractor-Park-City-200x200.jpg" alt="doctor_image"
+                                class="dr_image">
+                        </div>
                         <div>
                             <p class="dr_text">Dr. Sean Mann, D.C.</p>
-                            <div class="dr_line">a</div>
+                            <div class="dr_line"></div>
                         </div>
                     </div>
                 </div>
+                <div class="dr_content_right_side">
+                    <div class="dr_content_right_side_inner">
+                        <p>
+                            Spigot designed and currently maintains my website for my chiropractic business and I
+                            couldn’t be happier with the consistent month after month income my website brings in.
+                        </p>
+                    </div>
+                </div>
             </div>
+            <div class="info_block_wrapper">
+                <div class="info_block">
+                    <div class="info_block_img">
+                        <img src="./images/infoblock/goots-480x300.jpg" alt="" class="ib_image">
+                    </div>
+                    <div class="info_block_text">
+                        <p>Gutenberg: Getting a little higher on the bandwagon?</p>
+                        <p>I recently published an article on our dev process, which relies heavily on…</p>
+                    </div>
+                    <div class="info_block_date">
+                        <p>WordPress</p>
+                        <p>July 10, 2020</p>
+                    </div>
+                </div>
+
+                <div class="info_block">
+                    <div class="info_block_img">
+                        <img src="./images/infoblock/gutenbergbeaver-480x300.jpg" alt="">
+                    </div>
+                    <div class="info_block_text">
+                        <p>Website Design and Digital Marketing for Nonprofits: A Case Study (Part I)</p>
+                        <p>At Spigot Design, we take pride in our work with local nonprofits. From…</p>
+                    </div>
+                    <div class="info_block_date">
+                        <p>WordPress</p>
+                        <p>July 10, 2020</p>
+                    </div>
+                </div>
+
+                <div class="info_block">
+                    <div class="info_block_img">
+                        <img src="./images/infoblock/dominik-scythe-414905-480x300.jpg" alt="">
+                    </div>
+                    <div class="info_block_text">
+                        <p>Embracing WordPress Page Builders</p>
+                        <p>I've been building websites for quite a long time now. I wasn't there…</p>
+                    </div>
+                    <div class="info_block_date">
+                        <p>WordPress</p>
+                        <p>July 10, 2020</p>
+                    </div>
+                </div>
+
+                <div class="info_block">
+                    <div class="info_block_img">
+                        <img src="./images/infoblock/jeremy-bishop-OXMX3R0KKx0-unsplash-480x300.jpg" alt="">
+                    </div>
+                    <div class="info_block_text">
+                        <p>When to Choose Squarespace Over WordPress</p>
+                        <p>If our recent post detailing the reasons businesses should choose WordPress over Squarespace…
+                        </p>
+                    </div>
+                    <div class="info_block_date">
+                        <p>WordPress</p>
+                        <p>July 10, 2020</p>
+                    </div>
+                </div>
+
+                <div class="info_block">
+                    <div class="info_block_img">
+                        <img src="./images/infoblock/lls-pcm-new-480x300.jpg" alt="">
+                    </div>
+                    <div class="info_block_text">
+                        <p>Gutenberg: Getting a little higher on the bandwagon?</p>
+                        <p>I recently published an article on our dev process, which relies heavily on…</p>
+                    </div>
+                    <div class="info_block_date">
+                        <p>WordPress</p>
+                        <p>July 10, 2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="address_company">
+                <div class="address_company_img">
+                    <img src="./images/Google-Maps-copy.jpg" alt="">
+                </div>
+                <div class="address_company_btn">
+                    <button>Work with us</button>
+                </div>
+            </div>
+            <footer>
+                <div class="footer_inner">
+                    <p>© SPIGOT DESIGN. SOME RIGHTS RESERVED. PRIVACY</p>
+                    <ul class="soc_networks_list">
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                    </ul>
+                </div>
+            </footer>
         </article>
     </main>
 </body>
