--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spigot</title>
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=8"/> -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
         integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
@@ -250,7 +251,7 @@
             </div>
             <div class="address_company">
                 <div class="address_company_img">
-                    <img src="./images/Google-Maps-copy.jpg" alt="">
+                    <!-- <img src="./images/Google-Maps-copy.jpg" alt=""> -->
                 </div>
                 <div class="address_company_btn">
                     <button>Work with us</button>
