--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spigot</title>
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=8"/> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=8"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
         integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -170,7 +173,7 @@
                 </div>
                 <div class="dr_content_right_side">
                     <div class="dr_content_right_side_inner">
-                        <p>
+                        <p class="dr_content_right_side_inner_text">
                             Spigot designed and currently maintains my website for my chiropractic business and I
                             couldn’t be happier with the consistent month after month income my website brings in.
                         </p>
@@ -251,7 +254,6 @@
             </div>
             <div class="address_company">
                 <div class="address_company_img">
-                    <!-- <img src="./images/Google-Maps-copy.jpg" alt=""> -->
                 </div>
                 <div class="address_company_btn">
                     <button>Work with us</button>
@@ -268,6 +270,7 @@
             </footer>
         </article>
     </main>
+    <script> </script>
 </body>
 
 </html>
